# i-cannot-read

./: .gitignore  i-cannot-read-e0d51f9ac13c5c7f.js  i-cannot-read-e0d51f9ac13c5c7f_bg.wasm  i-cannot-read-e92a7f7f5ed4d2f0.js  i-cannot-read-e92a7f7f5ed4d2f0_bg.wasm  index.html  main-875ecc5d7a6c3fd8.css
.github/workflows/: deploy_fe.yml
fe/: Cargo.toml  index.html  main.css
fe/src/: data.rs  main.rs  problem.rs
