[package]
name = "i-cannot-read"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version="0.21", features = ["csr"] }
yew-autoprops = "0.4.1"
yew-hooks = "0.3"
rand = "0.8.5"
web-sys = "0.3.67"
